Next version of web file.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello Coursera Angular JS Course 2020</title>
   </head>
   <body>
-    <<h1>Hello Shreela</h1>
+    <h1>Hello Students|I am thrilled about this course!</h1>
   </body>
 </html>
